# sde-session

./: Makefile.am  Makefile.in  README  SDE.desktop.in.in  aclocal.m4  autostart  configure  configure.ac  desktop.conf  openbox-sde.in  sde-lock-screen.desktop.in  sde-logout.desktop.in  startlxde.in  startsde.in
lxpanel/: config  panel.in
man/: Makefile.am  Makefile.in  lxde-logout.1  openbox-sde.1  openbox-sde.xml  sde-logout.1  startsde.1
openbox/: menu.xml  rc.xml.in
pcmanfm/: pcmanfm.conf.in
po/: LINGUAS  POTFILES.in  POTFILES.skip
stuurman-desktop/: desktop.conf.in
wallpapers/: LICENSE.txt
waterline/: config
waterline/panels/: panel1.js  panel2.js
